<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            style="@style/labels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />

        <EditText
            android:id="@+id/enterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enterTitle" />


        <EditText
            android:id="@+id/enterAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enterAmount" />


        <CheckBox
            android:id="@+id/AudioCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Audio" />

        <EditText
            android:id="@+id/enterDescription"
            android:layout_width="244dp"
            android:layout_height="155dp"
            android:layout_marginTop="20dp"
            android:gravity="top|left"
            android:hint="@string/enterDescription" />

        <ImageButton
            android:id="@+id/mic"
            android:layout_width="244dp"
            android:layout_height="155dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/microphone"
            android:visibility="gone"
            app:tint="@color/black" />

        <ImageButton
            android:id="@+id/micRecording"
            android:layout_width="244dp"
            android:layout_height="155dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/microphonerecording"
            android:visibility="gone"
          />





        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/addToList" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>